Created task and projects screens

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,10 @@
     "paths": {
       "@/pages/*": ["src/pages/*"],
       "@/shared/*": ["src/shared/*"],
+      "@/projects/*": ["src/projects/*"],
       "@/tasks/*": ["src/tasks/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "templates"]
 }
