--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "dexie": "^3.2.1",
+    "dexie-react-hooks": "^1.1.1",
     "next": "12.1.4",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
@@ -20,10 +23,12 @@
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
     "eslint-config-prettier": "8.5.0",
     "jest": "27.5.1",
+    "reactcci": "^1.8.4",
     "typescript": "4.6.3"
   }
 }
