--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "test": "jest --watch"
   },
   "dependencies": {
-    "dexie": "^3.2.1",
-    "dexie-react-hooks": "^1.1.1",
+    "@chakra-ui/react": "1.8.8",
+    "@emotion/react": "11.9.0",
+    "@emotion/styled": "11.8.1",
+    "dexie": "3.2.1",
+    "dexie-react-hooks": "1.1.1",
+    "framer-motion": "6.3.0",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "uuid": "^8.3.2"
+    "react-icons": "^4.3.1",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
@@ -28,7 +33,7 @@
     "eslint-config-next": "12.1.4",
     "eslint-config-prettier": "8.5.0",
     "jest": "27.5.1",
-    "reactcci": "^1.8.4",
+    "reactcci": "1.8.4",
     "typescript": "4.6.3"
   }
 }
