--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-icons": "^4.3.1",
+    "react-icons": "4.3.1",
     "uuid": "8.3.2"
   },
   "devDependencies": {
